umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_openbabel_razinger_fig7_61.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 31
sum_formula: C27O
graph6: "[???o???G???O??HGO?OG?aQC?@AG?G_C@?CO????P???O????@????_???G???A"
